--- a/dashboard/kubernetes-dashboard.yaml
+++ b/dashboard/kubernetes-dashboard.yaml
@@ -115,6 +115,7 @@ spec:
           protocol: TCP
         args:
           - --auto-generate-certificates
+          - --enable-skip-login
           # Uncomment the following line to manually specify Kubernetes API server Host
           # If not specified, Dashboard will attempt to auto discover the API server and connect
           # to it. Uncomment only if the default does not work.
