--- a/dashboard/kubernetes-dashboard.yaml
+++ b/dashboard/kubernetes-dashboard.yaml
@@ -115,7 +115,6 @@ spec:
           protocol: TCP
         args:
           - --auto-generate-certificates
-          - --enable-skip-login
           # Uncomment the following line to manually specify Kubernetes API server Host
           # If not specified, Dashboard will attempt to auto discover the API server and connect
           # to it. Uncomment only if the default does not work.
@@ -148,16 +147,16 @@ spec:
 ---
 # ------------------- Dashboard Service ------------------- #
 
-kind: Service
-apiVersion: v1
-metadata:
-  labels:
-    k8s-app: kubernetes-dashboard
-  name: kubernetes-dashboard
-  namespace: kube-system
-spec:
-  ports:
-    - port: 443
-      targetPort: 8443
-  selector:
-    k8s-app: kubernetes-dashboard
+# kind: Service
+# apiVersion: v1
+# metadata:
+#   labels:
+#     k8s-app: kubernetes-dashboard
+#   name: kubernetes-dashboard
+#   namespace: kube-system
+# spec:
+#   ports:
+#     - port: 443
+#       targetPort: 8443
+#   selector:
+#     k8s-app: kubernetes-dashboard
